# AlizaMS

./: .gitignore  AlizaMS.icns  CMakeLists.txt  README.md  alizams.qrc  alizams_debugger  alizams_version.h  main.cpp
.github/: FUNDING.yml
CG/: camera.cpp  camera.h  glwidget-qt4-core.h  glwidget-qt4-mac.h  glwidget-qt4.h  glwidget-qt5-core.h  glwidget-qt5-mac.h  glwidget-qt5.h  glwidget.cpp  shaders.h  shaders_core.h  testgl.cpp  testgl.h
CG/data/: cube_data.h  lettera_data.h  letteri_data.h  letterl_data.h  letterp_data.h  letterr_data.h  letters_data.h
CMake/: FindCharLS.cmake  FindKAKADU.cmake  FindLCMS2.cmake  FindOpenJPEG.cmake  FindOpenSSL.cmake  FindPVRGJPEG.cmake  FindUUID.cmake
GUI/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  aliza.cpp  aliza.h  animwidget.cpp  animwidget.h  findrefdialog.cpp  findrefdialog.h  graphicspathitem.cpp  graphicspathitem.h  graphicsutils.cpp  graphicsutils.h  graphicsview.cpp  graphicsview.h  graphicswidget.cpp  graphicswidget.h  handleitem.cpp  handleitem.h  histogramgen.cpp  histogramgen.h  histogramview.cpp  histogramview.h  iconutils.cpp  iconutils.h  imageinfodialog.cpp  imageinfodialog.h  imagesbox.cpp  imagesbox.h  imagesbox.ui  infodialog.cpp  infodialog.h  infodialog.ui  labelwidget.cpp  labelwidget.h  levelitem.cpp  levelitem.h  lutwidget.cpp  lutwidget.h  mainwindow.cpp  (+43 more)
alizalcms/: CMakeLists.txt  cmsio0.c  cmsio1.c  cmsnamed.c  cmsplugin.c  cmstypes.c  lcms2.h
alizams/: CMakeLists.txt  alizams.qrc  alizams.rc  alizams_version.h  main.cpp
alizams/CG/: camera.cpp  camera.h  glwidget-qt4.h  glwidget-qt5.h  glwidget.cpp  glwidget.h  shaders.h  testgl.cpp  testgl.h
alizams/CG/data/: cube_data.h  lettera_data.h  letterr_data.h  letters_data.h
alizams/GUI/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  aliza.cpp  aliza.h  animwidget.cpp  animwidget.h  animwidget.ui  findrefdialog.cpp  findrefdialog.h  findrefdialog.ui  graphicspathitem.h  graphicsutils.cpp  graphicsutils.h  graphicsview.cpp  graphicsview.h  graphicswidget.cpp  graphicswidget.h  histogramgen.cpp  histogramview.cpp  iconutils.cpp  iconutils.h  imageinfodialog.ui  imagesbox.cpp  imagesbox.h  imagesbox.ui  labelwidget.h  levelitem.h  lutwidget.cpp  lutwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qxtspanslider.cpp  qxtspanslider.h  settingswidget.cpp  settingswidget.h  settingswidget.ui  srwidget.cpp  srwidget.h  (+10 more)
alizams/b/: LICENSE.txt
alizams/browser/: browserwidget2.cpp  browserwidget2.h  browserwidget2.ui  ctkdialog.cpp  sqtree.cpp  sqtree.h  sqtree.ui
alizams/common/: codecutils.cpp  commonutils.cpp  commonutils.h  contourutils.cpp  contourutils.h  luts.h  structures.cpp  structures.h
alizams/common/colorspace/: colorspace.h
alizams/dicom/: dicomutils.cpp  dicomutils.h  prconfigutils.cpp  spectroscopyutils.cpp  splituihgridfilter.cpp  splituihgridfilter.h  srutils.cpp  srutils.h  ultrasoundregionutils.cpp  ultrasoundregionutils.h
alizams/vectormath/: allocator.h
b/LinearMath/: btAlignedObjectArray.h  btConvexHull.cpp  btConvexHullComputer.cpp  btReducedVector.h  btSerializer.h  btThreads.cpp
bitmaps/: alizams.xcf
browser/: anonymazerwidget2.cpp  anonymazerwidget2.h  anonymazerwidget2.ui  browserwidget2.cpp  browserwidget2.h  browserwidget2.ui  ctkdialog.cpp  ctkdialog.h  ctkdialog.ui  helpwidget.cpp  helpwidget.h  helpwidget.ui  sqtree.cpp  sqtree.h  sqtree.ui
common/: codecutils.cpp  codecutils.h  commonutils.cpp  commonutils.h  contourutils.cpp  contourutils.h  filepath.cpp  filepath.h  luts.h  mmath.cpp  mmath.h  structures.cpp  structures.h
common/colorspace/: colorspace.cpp  colorspace.h
common/itk/: itkSigmoid2ImageFilter.h
common/mmath_test/src/: CMakeLists.txt  test_almost_equal.cpp
debian-10/: alizams.lintian-overrides  changelog  control  copyright  rules
debian-12-qt5/: changelog  control  copyright  rules
debian-12-qt6/: changelog  control  copyright  rules
dicom/: dicomutils.cpp  dicomutils.h  loaddicom.cpp  loaddicom.h  loaddicom_t.cpp  loaddicom_t.h  prconfigutils.cpp  prconfigutils.h  spectroscopydata.h  spectroscopyutils.cpp  spectroscopyutils.h  splituihgridfilter.cpp  splituihgridfilter.h  srutils.cpp  srutils.h  ultrasoundregiondata.h  ultrasoundregionutils.cpp  ultrasoundregionutils.h
fedora-34/: alizams.spec
mdcm/: Copyright.txt  README.md
mdcm/Utilities/: CMakeLists.txt  mdcm_charls.h  mdcm_ljpeg12.h  mdcm_ljpeg16.h  mdcm_ljpeg8.h  mdcm_openjpeg.h  mdcm_uuid.h  mdcm_zlib.h
mdcm/Utilities/mdcmcharls/: CMakeLists.txt  charls.def  jpeg_stream_reader.cpp  jpeg_stream_reader.h  version.h
mdcm/Utilities/mdcmjpeg/: CMakeLists.txt  README.GDCM.txt  README.MDCM.txt  jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jcdiffct.c  jchuff.c  jchuff.h  jcinit.c  jclhuff.c  jclossls.c  jclossy.c  jcmainct.c  jcmarker.c  jcmaster.c  jcodec.c  jcomapi.c  jconfig.h  jcparam.c  jcphuff.c  jcpred.c  jcprepct.c  jcsample.c  jcscale.c  jcshuff.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  (+41 more)
mdcm/Utilities/mdcmjpeg/12/: CMakeLists.txt
mdcm/Utilities/mdcmjpeg/16/: CMakeLists.txt
mdcm/Utilities/mdcmjpeg/8/: CMakeLists.txt
mdcm/Utilities/mdcmopenjpeg/: CMakeLists.txt
mdcm/Utilities/mdcmopenjpeg/src/lib/: CMakeLists.txt
mdcm/Utilities/mdcmopenjpeg/src/lib/openjp2/: CMakeLists.txt  j2k.c  openjpeg.h  openjpeg_mangle.h.in  tcd.c
mdcm/Utilities/mdcmrle/: info.h  io.cxx  io.h  rle.cxx
mdcm/Utilities/mdcmuuid/: CMakeLists.txt  gen_uuid.c  uuid_mangle.h.in
mdcm/Utilities/mdcmzlib/: CMakeLists.txt  deflate.c  gzio.c  gzread.c  inflate.c  trees.c  zconf.h.cmakein  zlib.h
mdcm/Utilities/pvrg/: CMakeLists.txt  jpeg.c
package/apple/: Info.plist  cleanqt.sh  create_dmg.command  notes.txt  runlipo.sh
package/debian/: alizams.install  control  rules
package/tmp/: build.sh
vectormath/: allocator.h
vectormath/scalar/: matrix.h  quaternion.h  vector.h  vectormath.h
vectormath/sse/: allocator.h  boolinvec.h  floatinvec.h  internal.h  matrix.h  quaternion.h  vecidx.h  vector.h  vectormath.h
(+382 files in other folders)
